<resources>
    <string name="app_name">Fresher Welcome | UCSTgo</string>
    <string name="action_clear_voting">Clear Voting</string>
    <string name="tv_king">King</string>
    <string name="tv_queen">Queen</string>
    <string name="tv_attractive_boy">Prince</string>
    <string name="tv_attractive_girl">Princess</string>
    <string name="tv_innocence">Innocence</string>
    <string name="tv_innocence_boy">Innocence Boy</string>
    <string name="tv_innocence_girl">Innocence Girl</string>

    <string name="fragment_home">@string/app_name</string>
    <string name="fragment_photo">Gallery</string>
    <string name="fragment_selection_list_king">@string/tv_king</string>
    <string name="fragment_selection_list_queen">@string/tv_queen</string>
    <string name="fragment_selection_list_attractive_boy">@string/tv_attractive_boy</string>
    <string name="fragment_selection_list_attractive_girl">@string/tv_attractive_girl</string>
    <string name="fragment_selection_list_innocence">@string/tv_innocence</string>
    <string name="fragment_selection_list_innocence_boy">@string/tv_innocence_boy</string>
    <string name="fragment_selection_list_innocence_girl">@string/tv_innocence_girl</string>
    <string name="fragment_qr_title">QR</string>

    <string name="voting_dialog_title">Vote ပေးမှာသေချာပါသလား။</string>
    <string name="selection_ask_msg">&lt;font color="#2195f2"&gt;%s&lt;/font&gt; ကို &lt;font color="#2195f2"&gt;%s&lt;/font&gt; အဖြစ် Vote ပေးမှာသေချာပါသလား။</string>
    <string name="voting_dialog_positive">သေချာပါသည်</string>
    <string name="voting_dialog_negative">မလုပ်တော့ပါ</string>
    <string name="header_text">UCSTgo Header Logo</string>
    <string name="qr_code_text">QR Code</string>
    <string name="share_to_text">Share to</string>
    <string name="save_text">Save</string>
    <string name="connection_error">Connection error. Please try again.</string>
    <string name="re_connect">Connect</string>
    <string name="tv_ok">OK</string>
    <string name="tv_cancel">Cancel</string>
    <string name="action_about_us">About</string>
    <string name="voting_url">https://ucstaungoo.app/voting</string>
    <string name="developer">Kyaw Htut</string>
    <string name="libraries">Libraries</string>
    <string name="report_bugs">Report Bugs</string>
    <string name="selection_detail">Selection Detail</string>
    <string name="selelction_facebook">ဖေ့စ်ဘွတ် အကောင့် </string>
    <string name="selection_information_male">အခန်း - %s\nလိင်အမျိုးအစား - %s\nKing မဲရလဒ် - %s\nAttractive Boy မဲရလဒ် - %s\nInnocence မဲရလဒ် - %s</string>
    <string name="selection_information_female">အခန်း - %s\nလိင်အမျိုးအစား - %s\nQueen မဲရလဒ် - %s\nAttractive Girl မဲရလဒ် - %s\nInnocence မဲရလဒ် - %s</string>
    <string name="selection_empty">တစ်ခုခုမှားယွင်းနေပါသည်။</string>
    <string name="try_again">ပြန်ကြိုးစားမည်</string>
    <string name="selection_data_loading">ခေတ္တခနစောင့်ဆိုင်းပေးပါခင်ဗျာ။</string>

    <string-array name="library_list">
        <item>OkHttp</item>
        <item>Retrofit</item>
        <item>RxJava: Reactive Extensions for the JVM</item>
        <item>RxAndroid: Reactive Extensions for Android</item>
        <item>Butter Knife</item>
        <item>Glide</item>
        <item>Timber</item>
        <item>Android Architecture Components</item>
        <item>ZXing</item>
        <item>DotProgressBar</item>
        <item>BlurDialogFragment</item>
        <item>Custom Activity On Crash library</item>
        <item>DiscreteScrollView</item>
        <item>Shortbread</item>
    </string-array>

    <string-array name="label_for_selection">
        <item>@string/tv_king</item>
        <item>@string/tv_queen</item>
        <item>@string/tv_attractive_boy</item>
        <item>@string/tv_attractive_girl</item>
        <item>@string/tv_innocence</item>
        <!--<item>@string/tv_innocence_boy</item>
        <item>@string/tv_innocence_girl</item>-->
    </string-array>

    <string-array name="gender">
        <item>ယောင်္ကျားလေး</item>
        <item>မိန်းကလေး</item>
    </string-array>

    <string name="dsv_ex_msg_dont_set_lm">You should not set LayoutManager on DiscreteScrollView.class instance. Library uses a special one. Just don\'t call the method.</string>
    <string name="dsv_ex_msg_adapter_wrong_recycler">InfiniteScrollAdapter is supposed to work only with DiscreteScrollView</string>

    <string-array name="mm_text">
        <item>၀</item>
        <item>၁</item>
        <item>၂</item>
        <item>၃</item>
        <item>၄</item>
        <item>၅</item>
        <item>၆</item>
        <item>၇</item>
        <item>၈</item>
        <item>၉</item>
    </string-array>
</resources>
