<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:apps="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e7e7e7"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="16dp"
    apps:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activity.SelectionDetailActivity"
    tools:showIn="@layout/activity_selection_detail">

    <android.support.design.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true"
        android:padding="16dp"
        apps:cardCornerRadius="4dp"
        apps:cardElevation="4dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/no_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <android.support.constraint.Group
                android:id="@+id/try_again_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                apps:constraint_referenced_ids="btn_try_again,error_label" />

            <TextView
                android:id="@+id/error_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/selection_empty"
                android:textColor="#333333"
                android:textSize="16sp"
                apps:layout_constraintBottom_toTopOf="@+id/btn_try_again"
                apps:layout_constraintEnd_toEndOf="parent"
                apps:layout_constraintHorizontal_bias="0.5"
                apps:layout_constraintStart_toStartOf="parent"
                apps:layout_constraintTop_toTopOf="parent"
                apps:layout_constraintVertical_chainStyle="packed" />

            <Button
                android:id="@+id/btn_try_again"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/try_again"
                apps:layout_constraintBottom_toBottomOf="parent"
                apps:layout_constraintEnd_toEndOf="parent"
                apps:layout_constraintStart_toStartOf="parent"
                apps:layout_constraintTop_toBottomOf="@+id/error_label" />

            <android.support.constraint.Group
                android:id="@+id/loading_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                apps:constraint_referenced_ids="loading_progress,loading_label" />

            <TextView
                android:id="@+id/loading_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/selection_data_loading"
                android:textColor="#333333"
                android:textSize="16sp"
                apps:layout_constraintBottom_toTopOf="@+id/loading_progress"
                apps:layout_constraintEnd_toEndOf="parent"
                apps:layout_constraintHorizontal_bias="0.5"
                apps:layout_constraintStart_toStartOf="parent"
                apps:layout_constraintTop_toTopOf="parent"
                apps:layout_constraintVertical_chainStyle="packed" />

            <ProgressBar
                android:id="@+id/loading_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/try_again"
                apps:layout_constraintBottom_toBottomOf="parent"
                apps:layout_constraintEnd_toEndOf="parent"
                apps:layout_constraintStart_toStartOf="parent"
                apps:layout_constraintTop_toBottomOf="@+id/loading_label" />
        </android.support.constraint.ConstraintLayout>

        <ScrollView
            android:id="@+id/selection_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:scrollbars="none">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/selection_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ucst_logo"
                    apps:layout_constraintEnd_toEndOf="parent"
                    apps:layout_constraintStart_toStartOf="parent"
                    apps:layout_constraintTop_toTopOf="parent" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    apps:layout_constraintEnd_toEndOf="parent"
                    apps:layout_constraintStart_toStartOf="parent"
                    apps:layout_constraintTop_toBottomOf="@+id/selection_image" />

                <TextView
                    android:id="@+id/tv_selection_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="?colorPrimary"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    apps:layout_constraintEnd_toEndOf="parent"
                    apps:layout_constraintStart_toStartOf="parent"
                    apps:layout_constraintTop_toBottomOf="@+id/rv_image"
                    tools:text="@string/app_name" />

                <TextView
                    android:id="@+id/tv_selection_fb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/selelction_facebook"
                    android:textColor="#999"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    apps:layout_constraintEnd_toEndOf="parent"
                    apps:layout_constraintStart_toStartOf="parent"
                    apps:layout_constraintTop_toBottomOf="@+id/tv_selection_name"
                    tools:text="@string/app_name" />

                <TextView
                    android:id="@+id/tv_selection_information"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:lineSpacingMultiplier="1.5"
                    android:textColor="#333333"
                    android:textSize="16sp"
                    apps:layout_constraintBottom_toBottomOf="parent"
                    apps:layout_constraintEnd_toEndOf="parent"
                    apps:layout_constraintStart_toStartOf="parent"
                    apps:layout_constraintTop_toBottomOf="@+id/tv_selection_fb"
                    tools:text="@string/app_name" />
            </android.support.constraint.ConstraintLayout>
        </ScrollView>
    </android.support.design.card.MaterialCardView>
</LinearLayout>